maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^ShortestPathMaze:10: error: (Int, Int) does not take parameters
      Coord(sol+1)::(List(marquage(i(0),i(1),sol)))
                                    ^ShortestPathMaze:10: error: (Int, Int) does not take parameters
      Coord(sol+1)::(List(marquage(i(0),i(1),sol)))
                                         ^ShortestPathMaze:28: error: type List takes type parameters
def marquage(x:Int,y:Int,sol:Int):List ={
                                  ^